--- a/src/app/providers/provider/provider.component.html
+++ b/src/app/providers/provider/provider.component.html
@@ -1,11 +1,13 @@
-<form #form="ngForm" autocomplete="off">
+<form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
   <div class="form-group">
     <label>Name</label>
-    <input name="Name" #Name="ngModel" [(ngModel)]="service.formData.Name" class="form-control">
+    <input name="Name" #Name="ngModel" [(ngModel)]="service.formData.Name" class="form-control" required>
+    <div class="validation-error" *ngIf="Name.invalid && Name.touched">Required</div>
   </div>
   <div class="form-group">
     <label>Key</label>
-    <input name="Key" #Key="ngModel" [(ngModel)]="service.formData.Key" class="form-control">
+    <input name="Key" #Key="ngModel" [(ngModel)]="service.formData.Key" class="form-control" required>
+    <div class="validation-error" *ngIf="Key.invalid && Key.touched">Required</div>
   </div>
   <div class="form-group">
     <label>Description</label>
@@ -30,5 +32,8 @@
   <div class="form-group">
     <label>ApiKey</label>
     <input name="ApiKey" #ApiKey="ngModel" [(ngModel)]="service.formData.ApiKey" class="form-control">
+  </div>
+  <div class="form-group">
+    <button type="submit" [disabled]="form.invalid" class="btn btn-lg btn-block">Sumbit</button>
   </div>
 </form>
